--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,14 @@ server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
 logging.level.com.zaxxer.hikari=DEBUG
+
+debug=true
+
+# JWT
+jwt.secret=Password123!
+jwt.expirationMs=3600000
+# 1 hour = 3600000 milliseconds
+
+#upload files
+file.upload-dir=uploads
+
